initial style guide

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum velit, 
+        at porro minima sit, animi corporis autem excepturi pariatur temporibus ut 
+        dolorem quis! Odio earum reiciendis est, soluta sequi rem.
+    </p>
     
 </body>
 </html>
