--- a/index.html
+++ b/index.html
@@ -75,18 +75,18 @@
     </div>
 
     <main class="container">
-        <img src="assets/images/Image 01.png" alt="...">
-        <img src="assets/images/Image 02.png" alt="...">
-        <img src="assets/images/Image 03.png" alt="...">
-        <img src="assets/images/Image 04.png" alt="...">
-        <img src="assets/images/Image 05.png" alt="...">
-        <img src="assets/images/Image 06.png" alt="...">
-        <img src="assets/images/Image 07.png" alt="...">
-        <img src="assets/images/Image 08.png" alt="...">
-        <img src="assets/images/Image 09.png" alt="...">
-        <img src="assets/images/Image 10.png" alt="...">
-        <img src="assets/images/Image 11.png" alt="...">
-        <img src="assets/images/Image 12.png" alt="...">
+        <img src="assets/images/Image 01.png" alt="Vista da montanha com árvores e lago do barco">
+        <img src="assets/images/Image 02.png" alt="Imagem de pôr do sol em Veneza, Itália">
+        <img src="assets/images/Image 03.png" alt="Imagem da Ponte Rialto em Veneza, Itália">
+        <img src="assets/images/Image 04.png" alt="Imagem da parte externa de um restaurante em Veneza, Itália">
+        <img src="assets/images/Image 05.png" alt="Imagem da aldeia de Manarola Cinque Terre, Itália">
+        <img src="assets/images/Image 06.png" alt="Imagem aérea de Vernazza, uma comuna italiana da região da Ligúria, Província da Spezia">
+        <img src="assets/images/Image 07.png" alt="Imagem da ponte Vecchio, Florença na Itália">
+        <img src="assets/images/Image 08.png" alt="Imagem da Catedral Santa Maria del Fiore, em Florença na Itália">
+        <img src="assets/images/Image 09.png" alt="Imagem de uma vila na Itália">
+        <img src="assets/images/Image 10.png" alt="Imagem de uma vinícola de rua em Roma, Itália">
+        <img src="assets/images/Image 11.png" alt="Imagem de um prato italiano">
+        <img src="assets/images/Image 12.png" alt="Imagem do Coliseu em Roma, Itália">
     </main>
 
     <footer class="container">
